# NUice

./: .gitignore  .gitmodules  AudioProcessing.py  README.md  pull_all.sh
catkin_ws/src/nuice_abstraction/: CMakeLists.txt  package.xml
catkin_ws/src/nuice_autonomy/: CMakeLists.txt  package.xml
catkin_ws/src/nuice_autonomy_core/: drill_machine.py  melt_machine.py  state_machine.py
catkin_ws/src/nuice_bite/: CMakeLists.txt  LayerStatus.msg  ProababilityVector.Msg  gradient0912.sav  logistic0910.sav  logistic0912.sav  logistic_model.sav  neural.h5  neural_model.h5  package.xml
catkin_ws/src/nuice_gui/estop_widget/: CMakeLists.txt  package.xml  plugin.xml  setup.py
catkin_ws/src/nuice_gui/estop_widget/resource/: estop_widget.ui
catkin_ws/src/nuice_gui/estop_widget/scripts/: estop_widget  estop_widget.save
catkin_ws/src/nuice_gui/estop_widget/src/estop_widget/: estop_widget_module.py
catkin_ws/src/nuice_gui/motor_widget/: CMakeLists.txt  package.xml  plugin.xml  setup.py
catkin_ws/src/nuice_gui/motor_widget/resource/: motor_widget.ui
catkin_ws/src/nuice_gui/motor_widget/scripts/: motor_widget
catkin_ws/src/nuice_gui/motor_widget/src/motor_widget/: motor_widget_module.py
catkin_ws/src/nuice_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/nuice_simulations/: CMakeLists.txt  package.xml
catkin_ws/src/nuice_startup/: CMakeLists.txt  package.xml
firmware/: README.md
firmware/hall_effect_sketch/: hall_effect_sketch.ino
firmware/libraries/: README.md
firmware/libraries/NU32/: NU32Hardware.h
firmware/libraries/NU_current/: ACS712.cpp  ACS712.h  NU_ACS712.cpp  NU_ACS712.h
firmware/libraries/NU_current_sense/: ACS712.cpp  ACS712.h  ACS712_AC.cpp  ACS712_AC.h
firmware/libraries/NU_dc_motor/: NU_DCMotor.h
firmware/libraries/NU_generic/: NU_Driver.h  NU_GPIO.cpp  NU_GPIO.h  NU_Serial.h  NU_Serial_Driver.h  NU_UART.cpp  NU_UART.h  Potentiometer.c  Potentiometer.h  (+2 more)
firmware/mbed/: README.md
firmware/movement_board/: movement_board.ino
firmware/sample_sketch/: sample_sketch.ino  testdrive.ino
firmware/test_drive/: test_drive.ino
log/: latest_list
resources/: axis_jog.ui  gpio_widget.ui  heat.ui  heat_widget2.ui  rpi_setup.md
resources/nuice_simulations/: CMakeLists.txt
resources/urdf/: prismm.urdf
(+159 files in other folders)
